2008-04-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_destroy), (about_me_update_email),
	(about_me_commit), (about_me_focus_out), (about_me_setup_email),
	(about_me_load_string_field), (about_me_setup_dialog): rebuild email
	addresses completely when saving. The email fields are synthetic in
	e-d-s which means they might be reshuffled at will so we never know
	quite where the address we saved at pos 3 will end up. This should
	finally fix problems with the home address not being saved, and
	addresses being swapped or the like (bug #317835)

2008-04-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_commit), (about_me_focus_out),
	(about_me_set_address_field), (about_me_setup_dialog): fix a leak
	and some random cleanup

2008-04-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (passdlg_error_dialog),
	(passdlg_spawn_passwd), (passdlg_authenticate): launch the error
	dialog with the proper parent so it actually becomes possible to
	dismiss it. Also use GtkMessageDialog instead of eel, and reset the
	busy cursor when launching passwd fails.

2008-02-28  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (io_watch_stdout): fix misspelling of
	"palindrome" that would make us wait forever when that case occurred
	(bug #519398)

2008-02-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_dialog):
	* gnome-about-me.glade: fix widget tab order (bug #339936)

2008-02-16  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: don't distribute the .desktop.in file

2008-02-12  Jens Granseuer  <jensgr@gmx.net>

	* e-image-chooser.c: (e_image_chooser_class_init),
	(image_drag_data_received_cb):
	* gnome-about-me.c: (about_me_update_preview): port to gio

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (passdlg_spawn_passwd): add a translation
	hint

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.glade: don't mark empty and padding strings for