@@ -1,5 +1,10 @@
 2008-04-25  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-about-me.c: (about_me_load_photo), (about_me_setup_dialog):
+	properly handle errors when trying to get an icon for the user
+
+2008-04-25  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-about-me.c: (about_me_destroy), (about_me_update_email),
 	(about_me_commit), (about_me_focus_out), (about_me_setup_email),
 	(about_me_load_string_field), (about_me_setup_dialog): rebuild email
